force-app/main/default/objects/OrderRefundProduct__c/OrderRefundProduct__c.object-meta.xml
<CustomObject>
    <label>Order Refund Product</label>
    <nameField>
        <label>Order Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Refund Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>