force-app/main/default/objects/OrderRefundProduct__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Refund Products</relationshipLabel>
    <relationshipName>Order_Refund_Products</relationshipName>
    <type>Lookup</type>
</CustomField>