force-app/main/default/objects/OrderRefundProduct__c/fields/OrderRefund__c.field-meta.xml
<CustomField>
    <fullName>OrderRefund__c</fullName>
    <label>Order Refund</label>
    <referenceTo>OrderRefund__c</referenceTo>
    <relationshipLabel>Order Refund Products</relationshipLabel>
    <relationshipName>OrderRefundProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>