force-app/main/default/objects/OrderRefundProduct__c/fields/TotalRefund__c.field-meta.xml
<CustomField>
    <fullName>TotalRefund__c</fullName>
    <label>Total Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>